# Opolys

./: .gitignore  AGENTS.md  Cargo.toml  README.md  THE_PLAN.md  deny.toml
.github/workflows/: ci.yml  release-artifacts.yml
crates/consensus/: Cargo.toml
crates/consensus/src/: account.rs  block.rs  difficulty.rs  emission.rs  genesis.rs  lib.rs  mempool.rs  pos.rs  pow.rs  refiner.rs
crates/core/: Cargo.toml
crates/core/src/: constants.rs  errors.rs  lib.rs  types.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: dilithium.rs  hash.rs  lib.rs  signing.rs
crates/execution/: Cargo.toml
crates/execution/src/: dispatcher.rs  lib.rs
crates/networking/: Cargo.toml
crates/networking/src/: behaviour.rs  challenge.rs  discovery.rs  gossip.rs  lib.rs  network.rs  sync.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs  main.rs  node.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: jsonrpc.rs  lib.rs  server.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  store.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: account.rs  bip39.rs  hybrid_keypair.rs  key.rs  lib.rs  main.rs  signing.rs  wordlist.rs
docs/: ECONOMICS.md  ECONOMIC_AUDIT.md  ECONOMIC_SCENARIOS.md  GOLD_OBSERVABILITY.md  LAUNCH_BINDER.md  MAINNET_LAUNCH.md  OPERATOR_CONFIG.md  RELEASE.md  THREAT_MODEL.md
scripts/: build_release.ps1  economics_model.py  launch_rehearsal.ps1  por_rehearsal.ps1  release_smoke.ps1  testnet-bootstrap.sh
scripts/genesis_ceremony/: Cargo.toml
scripts/genesis_ceremony/src/: main.rs
testnet-data/: testnet-keys.txt
