[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/crypto",
    "crates/consensus",
    "crates/storage",
    "crates/execution",
    "crates/networking",
    "crates/node",
    "crates/wallet",
    "crates/rpc",
    "scripts/genesis_ceremony",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["The Blocksmith <adamblocksmith@protonmail.com>"]

[workspace.dependencies]
opolys-core = { path = "crates/core" }
opolys-crypto = { path = "crates/crypto" }
opolys-consensus = { path = "crates/consensus" }
opolys-storage = { path = "crates/storage" }
opolys-execution = { path = "crates/execution" }
opolys-networking = { path = "crates/networking" }
opolys-node = { path = "crates/node" }
opolys-wallet = { path = "crates/wallet" }
opolys-rpc = { path = "crates/rpc" }
evo-omap = { path = "../EVO-OMAP" }
borsh = { version = "1.5", features = ["derive"] }
blake3 = "1.8"
ed25519-dalek = { version = "2.1", features = ["serde"] }

rocksdb = "0.22"
libp2p = { version = "0.54", features = [
    "tcp", "noise", "yamux", "gossipsub", "kad", "identify",
    "ping", "dns", "macros", "serde", "quic", "rsa", "ecdsa", "ed25519",
    "secp256k1", "tokio", "request-response", "cbor", "relay"
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
rand = "0.9"
futures = "0.3"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
sha3 = "0.10"
hmac = "0.12"
bip39 = { version = "2.2", features = ["rand"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tempfile = "3"
rayon = "1.10"
reqwest = { version = "0.12", features = ["json"] }