[package]
name = "opolys-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "genesis-keys"
path = "src/bin/genesis-keys.rs"

[dependencies]
opolys-core.workspace = true
borsh.workspace = true
blake3.workspace = true
sha3.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
hex.workspace = true
thiserror.workspace = true
subtle.workspace = true
