[package]
name = "opolys-networking"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opolys-core.workspace = true
opolys-consensus.workspace = true
libp2p.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
borsh.workspace = true
async-trait.workspace = true
hex.workspace = true