[package]
name = "opolys-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opolys-core.workspace = true
opolys-consensus.workspace = true
opolys-node.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true