[package]
name = "opolys-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opolys-core.workspace = true
opolys-crypto.workspace = true
opolys-consensus.workspace = true
axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
hex.workspace = true