[package]
name = "opolys-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opolys-core.workspace = true
opolys-crypto.workspace = true
opolys-consensus.workspace = true
rocksdb.workspace = true
borsh.workspace = true
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile = "3"