[package]
name = "opolys-wallet"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "opl"
path = "src/main.rs"

[dependencies]
opolys-core.workspace = true
opolys-crypto.workspace = true
opolys-consensus.workspace = true
borsh.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
hmac.workspace = true
bip39.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
rand.workspace = true
thiserror.workspace = true
clap.workspace = true
tokio.workspace = true
reqwest.workspace = true
rpassword = "7.4"
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true
