[package]
name = "genesis-ceremony"
version.workspace = true
edition.workspace = true

[[bin]]
name = "genesis-ceremony"
path = "src/main.rs"

[dependencies]
blake3.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
